[gd_scene load_steps=3 format=3 uid="uid://4c7l2min62xx"]

[ext_resource type="Script" uid="uid://b2ndcm1u8rfsx" path="res://scripts/game.gd" id="1_uwrxv"]
[ext_resource type="Theme" uid="uid://cmvvuk1i6nypw" path="res://resources/theme.tres" id="2_yqjtg"]

[node name="Node" type="Node"]
script = ExtResource("1_uwrxv")

[node name="GlobalControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Loading" type="ColorRect" parent="GlobalControl"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.26239687, 0.26239687, 0.26239687, 1)

[node name="Label" type="Label" parent="GlobalControl/Loading"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 56
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="GlobalControl"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "0.7a"

[node name="date" type="Label" parent="GlobalControl"]
layout_mode = 0
offset_top = 24.0
offset_right = 47.0
offset_bottom = 47.0
text = "DATE"

[node name="PopupMessage" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_yqjtg")

[node name="ColorRect" type="ColorRect" parent="PopupMessage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.47058824)

[node name="ServerError" type="Panel" parent="PopupMessage"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -160.0
offset_right = 256.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PopupMessage/ServerError"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.225
theme_override_colors/font_color = Color(1, 0.2478047, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Connection to Server Lost"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Message" type="Label" parent="PopupMessage/ServerError"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.225
anchor_right = 1.0
anchor_bottom = 0.775
text = "ERRORMESSAGE"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="PopupMessage/ServerError"]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 448.0
offset_bottom = 312.0
text = "Back to Main Menu"

[node name="Scene" type="Node" parent="."]
